--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -105,6 +105,9 @@
       }, {
         'title': 'Interface - login',
         'href': 'dashboard-interface-login.html'
+      }, {
+        'title': 'Interface with dropdown - login',
+        'href': 'dashboard-interface-login-dropdown.html'
       }
     ]
   %}
