--- a/assets/scss/components/dashboard/form.scss
+++ b/assets/scss/components/dashboard/form.scss
@@ -211,6 +211,8 @@
     }
     & > * {
       display: flex;
+      overflow: hidden;
+      border-radius: 12px;
       @include animate(box-shadow);
       @include media('hover') {
         &:hover {
