--- a/assets/scss/components/color-theme.scss
+++ b/assets/scss/components/color-theme.scss
@@ -54,4 +54,99 @@
   .cs--favorite {
     --icon-color: var(--color-grey-20);
   }
+  .cs--btn--transparent-grad-blue {
+    &:after {
+      background-color: var(--color-grey-blue-20);
+    }
+  }
+  .cs--interface__dropdown-content {
+    border-color: var(--color-grey-20);
+    background-color: var(--color-white);
+    box-shadow: 0px 0px 40px rgba(215, 215, 215, 0.7);
+  }
+  .cs--card-filter__filter-item {
+    --card-filter-btn-bg: var(--color-light-blue-15);
+  }
+  .cs--table--bordered > tbody > tr:not(:last-child) {
+    border-color: var(--color-grey-20);
+  }
+  .cs--interface__dropdown-content .cs--table-wrapper tr {
+    @include media('hover') {
+      &:hover {
+        background-color: var(--color-light-blue-15);
+      }
+    }
+  }
+  .cs--table th {
+    background-color: var(--color-grey-5);
+  }
+  .cs--table-wrapper {
+    box-shadow: 0px 0px 30px rgba(31, 85, 134, 0.15);
+  }
+  .cs--dashboard--markets .cs--table {
+    background-color: var(--color-white);
+  }
+  .cs--exchange-card {
+    background-color: var(--color-white);
+    &__img {
+      mix-blend-mode: darken;
+    }
+    .cs--btn--transparent-grad-blue {
+      color: var(--base-text-color);
+      &:after {
+        background-color: var(--color-white);
+      }
+    }
+  }
+  .cs--page-side {
+    --side-link-color: var(--base-text-color);
+  }
+  .cs--dashboard-form {
+    background-color: var(--color-white);
+    .cs--table-wrapper {
+      box-shadow: none;
+    }
+    .cs--table--striped > tbody > tr:nth-of-type(even) {
+      background-color: var(--color-grey-5);
+    }
+    .cs--btn--transparent-grad-blue {
+      color: var(--base-text-color);
+      &:after {
+        background-color: var(--color-white);
+      }
+    }
+  }
+  .cs--table--striped > tbody > tr:nth-of-type(even) {
+    background-color: var(--color-grey-5);
+  }
+  .cs--dashboard--support {
+    .cs--table th {
+      background-color: var(--color-grey-10);
+    }
+  }
+  .cs--page hr {
+    background-color: var(--color-grey-20);
+  }
+  .cs--article {
+    background-color: var(--color-white);
+    .cs--btn--transparent-grad-blue {
+      color: var(--base-text-color);
+      &:after {
+        background-color: var(--color-white);
+      }
+    }
+  }
+  .cs--card-item {
+    background-color: var(--color-white);
+    &__link {
+      color: var(--color-blue-20);
+    }
+  }
+  .cs--details-item {
+    --detail-active-color: var(--color-light-blue-20);
+    --detail-bg-color: var(--color-white);
+  }
+  .cs--details-wrapper:not(:last-child) .cs--details-item {
+    border-color: var(--color-grey-20);
+  }
 }
