--- a/assets/scss/components/details-list.scss
+++ b/assets/scss/components/details-list.scss
@@ -23,7 +23,7 @@
     }
     @include media('hover') {
       &:hover {
-        background-color: var(--color-blue-70);
+        background-color: var(--detail-active-color);
       }
     }
     &::-webkit-details-marker,
@@ -31,7 +31,7 @@
       display: none;
     }
     &:focus {
-      background-color: var(--color-blue-70);
+      background-color: var(--detail-active-color);
     }
     &:before,
     &:after {
@@ -50,9 +50,11 @@
     }
   }
   &-item {
-    background-color: var(--color-blue-90);
+    --detail-active-color: var(--color-blue-70);
+    --detail-bg-color: var(--color-blue-90);
+    background-color: var(--detail-bg-color);
     &[open] {
-      background-color: var(--color-blue-70);
+      background-color: var(--detail-active-color);
       .cs--details-summary {
         &:after {
           transform: rotateZ(0deg);
