--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -127,7 +127,7 @@ $media-expressions: (
   --base-min-width: none;
 
   // Links base
-  --base-link-color: var(--color-white);
+  --base-link-color: var(--base-text-color);
 
   // Buttons base
   --btn-color: var(--color-white);
