--- a/assets/scss/components/dashboard/footer.scss
+++ b/assets/scss/components/dashboard/footer.scss
@@ -1,5 +1,6 @@
 .cs--dashboard-footer {
   --container-padding: 25px;
+  --icon-bg-color: var(--color-blue-90);
   padding: 40px 0 50px;
   margin-top: auto;
   background-color: var(--color-blue-90);
