--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -23,6 +23,7 @@
 @import 'balance-table';
 @import 'chat';
 @import 'favorite';
+@import 'tabs';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/header';
