--- a/assets/html/partials/components/dashboard/header-login.njk
+++ b/assets/html/partials/components/dashboard/header-login.njk
@@ -83,7 +83,7 @@
         </button>
         <div class="cs--landing-login">
           <a href="javascript:void(0)">log in</a>
-          <a href="registration-create-account.html" class="cs--btn cs--btn--transparent-grad-blue">sing up</a>
+          <a href="registration-create-account.html" class="cs--btn cs--btn--grad-blue">sing up</a>
         </div>
       </div>
       <button type="button" class="cs--landing-header__menu" data-landing-expander aria-expanded="false">
