fix from feedbacks

--- a/assets/html/partials/sections/dashboard-interface/my-orders.njk
+++ b/assets/html/partials/sections/dashboard-interface/my-orders.njk
@@ -140,6 +140,57 @@
           'Rejected',
           'Turpis'
         ]
+      }, {
+        'class': [
+          '',
+          '',
+          '',
+          'cs--color-secondary',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '58853.58',
+          '0.0447',
+          '58853.580000000002',
+          '18 mar 2021',
+          'Rejected',
+          'Turpis'
+        ]
+      }, {
+        'class': [
+          '',
+          '',
+          '',
+          'cs--color-secondary',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '58853.58',
+          '0.0447',
+          '58853.580000000002',
+          '18 mar 2021',
+          'Rejected',
+          'Turpis'
+        ]
+      }, {
+        'class': [
+          '',
+          '',
+          '',
+          'cs--color-secondary',
+          'cs--color-danger',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '58853.58',
+          '0.0447',
+          '58853.580000000002',
+          '18 mar 2021',
+          'Rejected',
+          'Turpis'
+        ]
       }
     ]
   }
