--- a/assets/html/partials/sections/dashboard-interface/order-book.njk
+++ b/assets/html/partials/sections/dashboard-interface/order-book.njk
@@ -117,13 +117,79 @@
         ''
       ],
       'list': [
-        'Size',
-        'Price (USDT)',
-        'Total'
+        '',
+        '',
+        ''
       ]
     },
     'body': [
       {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
+        'class': [
+          '',
+          'cs--color-success',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '0.00423',
+          '55446.23',
+          '2356.6546546'
+        ]
+      }, {
         'class': [
           '',
           'cs--color-success',
