--- a/assets/html/partials/sections/dashboard-interface/tools.njk
+++ b/assets/html/partials/sections/dashboard-interface/tools.njk
@@ -205,9 +205,11 @@
   <div class="cs--interface__chart-head">
     <details data-dropdown class="cs--interface__dropdown cs--dashboard-form__input-wrapper  cs--dashboard-form__input--arrow">
       <summary class="cs--interface__dropdown-btn cs--dashboard-form__input">
-        <img src="./img/crypto-icon/btc.svg" alt="">
+        <div class="cs--interface__dropdown-btn-img">
+          <img src="./img/crypto-icon/btc.svg" alt="">
+        </div>
         <b>BTC - USDC</b>
-        <span class="ml-auto">Market</span>
+        <span class="cs--interface__dropdown-btn-text">Market</span>
       </summary>
       <div class="cs--interface__dropdown-content">
         <form class="cs--card-filter__form">
