--- a/assets/html/partials/sections/dashboard-interface/trade-history.njk
+++ b/assets/html/partials/sections/dashboard-interface/trade-history.njk
@@ -92,6 +92,39 @@
           '0.0447',
           '14:44:45'
         ]
+      }, {
+        'class': [
+          'cs--color-danger',
+          '',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '58853.58',
+          '0.0447',
+          '14:44:45'
+        ]
+      }, {
+        'class': [
+          'cs--color-danger',
+          '',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '58853.58',
+          '0.0447',
+          '14:44:45'
+        ]
+      }, {
+        'class': [
+          'cs--color-danger',
+          '',
+          'cs--color-secondary'
+        ],
+        'list': [
+          '58853.58',
+          '0.0447',
+          '14:44:45'
+        ]
       }
     ]
   }
