--- a/assets/scss/components/chat.scss
+++ b/assets/scss/components/chat.scss
@@ -1,13 +1,13 @@
 .cs--chat {
   &-wrapper {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    grid-template-columns: 1fr;
-    grid-gap: 10px;
-    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
   &-output {
     overflow: auto;
+    max-height: 200px;
+    margin-bottom: 10px;
     &::-webkit-scrollbar {
       width: 5px;
     }
@@ -24,6 +24,7 @@
   &-input {
     display: flex;
     align-items: flex-start;
+    margin-top: auto;
     textarea.cs--dashboard-form__input {
       height: 42px;
       min-height: 0;
