--- a/assets/scss/components/dropdown.scss
+++ b/assets/scss/components/dropdown.scss
@@ -78,7 +78,7 @@
       border: none;
       background-color: transparent;
       outline: none;
-      color: var(--color-white);
+      color: var(--base-text-color);
       font-weight: 500;
       font-size: 14px;
       font-family: var(--font-secondary);
