--- a/assets/scss/components/interface/interface.scss
+++ b/assets/scss/components/interface/interface.scss
@@ -45,6 +45,16 @@
     &-btn {
       position: relative;
       z-index: 2;
+      font-family: var(--font-secondary);
+      &-img {
+        width: 20px;
+        height: 20px;
+      }
+      &-text {
+        margin-left: 30px;
+        font-weight: 700;
+        font-size: 12px;
+      }
       &.cs--dashboard-form__input {
         display: flex;
         align-items: center;
@@ -64,10 +74,10 @@
     }
     &-content {
       position: absolute;
-      top: 0;
-      left: 0;
+      top: -1px;
+      left: -1px;
       z-index: 1;
-      width: 250%;
+      width: 300%;
       padding-top: 65px;
       border: 1px solid var(--color-blue-50);
       border-radius: 5px;
@@ -79,6 +89,9 @@
       .cs--card-filter__form {
         grid-template-columns: 1fr;
         padding: 0 15px 15px;
+      }
+      .cs--card-filter__filter-title {
+        padding: 12px 25px;
       }
       .cs--dashboard-form__input--search-wrapper {
         width: 100%;
@@ -92,6 +105,8 @@
             }
           }
           & > td {
+            padding-top: 10px;
+            padding-bottom: 10px;
             &:first-child {
               padding-left: 15px;
             }
@@ -159,7 +174,7 @@
     }
   }
   &__break-point {
-    margin: 15px 0;
+    margin: 15px 0 0;
     font-weight: 700;
     font-size: 16px;
     text-align: center;
@@ -172,6 +187,9 @@
       background-color: transparent;
       color: var(--color-grey);
     }
+    td {
+      line-height: 1.2;
+    }
   }
   .cs--btn-group {
     .cs--btn {
@@ -183,7 +201,7 @@
 .cs--interface__block {
   display: flex;
   flex-direction: column;
-  padding: 15px 20px;
+  padding: 15px;
   background-color: var(--color-blue-85);
   @include media('<sm') {
     &:not(:last-child) {
@@ -210,11 +228,9 @@
   }
   &--chat {
     grid-area: chat;
-    height: 300px;
     background-color: var(--color-blue-60);
     box-shadow: 10px 0px 4px rgba(14, 17, 41, 0.25);
     .cs--interface__block-head {
-      margin-bottom: 0;
       &-icon {
         display: flex;
         width: 20px;
