add email templates

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -108,6 +108,12 @@
       }, {
         'title': 'Interface with dropdown - login',
         'href': 'dashboard-interface-login-dropdown.html'
+      }, {
+        'title': 'Email - 1',
+        'href': 'email-1.html'
+      }, {
+        'title': 'Email - 2',
+        'href': 'email-2.html'
       }
     ]
   %}
