--- a/assets/scss/components/interface/interface.scss
+++ b/assets/scss/components/interface/interface.scss
@@ -210,6 +210,7 @@
   }
   &--order-book {
     grid-area: order-book;
+    max-height: 660px;
     .cs--interface__block-title {
       margin-bottom: 25px;
     }
